<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="138dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/NomeEvento"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/EnderecoEvento"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HoraEvento"
            android:textAlignment="textStart" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/CheckboxEvento"
            android:textAlignment="textStart" />
    </LinearLayout>

</LinearLayout>